@@ -14,13 +14,14 @@ plugins {
 description = 'Frequent Pattern Mining :: Neo4J with Pregel'
 
 ext {
-    gdsVersion = '2.3.7'
-    neo4jVersion = '5.7.0'
+    gdsVersion = '2.4.0'
+    neo4jVersion = '5.8.0'
     immutablesVersion = '2.8.1'
     jetbrainsAnnotations = '18.0.0'
+    junit5Version = '5.7.1'
 }
 
-version '1.0.0'
+version '1.1.0'
 
 repositories {
     // Use Maven Central for resolving dependencies.
@@ -29,14 +30,7 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
-
-    // This dependency is used by the application.
-    implementation 'com.google.guava:guava:31.1-jre'
-    
-    compileOnly "org.neo4j:neo4j:$neo4jVersion"
-
+    // We depend on the proc artifact of the GDS library
     compileOnly "org.neo4j.gds:proc:$gdsVersion"
     compileOnly "org.neo4j.gds:core:$gdsVersion"
     compileOnly "org.neo4j.gds:algo-common:$gdsVersion"
@@ -45,6 +39,12 @@ dependencies {
     compileOnly "org.neo4j.gds:annotations:$gdsVersion"
     compileOnly "org.neo4j.gds:proc-pregel:$gdsVersion"
     compileOnly "org.neo4j.gds:config-api:$gdsVersion"
+    compileOnly "org.neo4j.gds:progress-tracking:$gdsVersion"
+    compileOnly "org.neo4j.gds:transaction:$gdsVersion"
+
+    // We also need to depend on Neo4j itself for our tests.
+    // Usually, Neo4j is available when we are running as a plugin.
+    compileOnly "org.neo4j:neo4j:$neo4jVersion"
 
     // We need an annotation processor for our K1 configuration
     annotationProcessor "org.immutables:value:$immutablesVersion"
@@ -64,10 +64,53 @@ dependencies {
     testImplementation "org.neo4j.gds:config-api:$gdsVersion"
     testImplementation "org.neo4j.gds:progress-tracking:$gdsVersion"
 
-    // implementation "org.neo4j.gds:core:$gdsVersion"
-    // implementation 'org.neo4j.graphalgo:graph-data-science:1.7.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
+    // Use JUnit Jupiter API for testing.
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5Version"
+
+    // Use JUnit Jupiter Engine for testing.
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit5Version"
+
+
+
+    // // Use JUnit Jupiter for testing.
+    // testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+
+    // // This dependency is used by the application.
+    // implementation 'com.google.guava:guava:31.1-jre'
+    
+    // compileOnly "org.neo4j:neo4j:$neo4jVersion"
+
+    // compileOnly "org.neo4j.gds:proc:$gdsVersion"
+    // compileOnly "org.neo4j.gds:core:$gdsVersion"
+    // compileOnly "org.neo4j.gds:algo-common:$gdsVersion"
+    // compileOnly "org.neo4j.gds:executor:$gdsVersion"
+    // compileOnly "org.neo4j.gds:memory-usage:$gdsVersion"
+    // compileOnly "org.neo4j.gds:annotations:$gdsVersion"
+    // compileOnly "org.neo4j.gds:proc-pregel:$gdsVersion"
+    // compileOnly "org.neo4j.gds:config-api:$gdsVersion"
+
+    // // We need an annotation processor for our K1 configuration
+    // annotationProcessor "org.immutables:value:$immutablesVersion"
+    // annotationProcessor "org.neo4j.gds:config-generator:$gdsVersion"
+    // annotationProcessor "org.neo4j.gds:pregel-proc-generator:$gdsVersion"
+    // compileOnly         "org.jetbrains:annotations:$jetbrainsAnnotations"
+    // compileOnly         "org.immutables:value-annotations:$immutablesVersion"
+
+    // // We need an annotation processor for our test configurations
+    // testAnnotationProcessor "org.neo4j.gds:config-generator:$gdsVersion"
+
+    // // We need to provide GDS for the test as well, along with some test helpers
+    // testImplementation "org.neo4j.gds:test-utils:$gdsVersion"
+    // testImplementation "org.neo4j.gds:proc:$gdsVersion"
+    // testImplementation "org.neo4j.gds:core:$gdsVersion"
+    // testImplementation "org.neo4j.gds:proc-pregel:$gdsVersion"
+    // testImplementation "org.neo4j.gds:config-api:$gdsVersion"
+    // testImplementation "org.neo4j.gds:progress-tracking:$gdsVersion"
+
+    // // implementation "org.neo4j.gds:core:$gdsVersion"
+    // // implementation 'org.neo4j.graphalgo:graph-data-science:1.7.0'
+    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
+    // testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -82,9 +125,21 @@ application {
     mainClass = 'com.neo4j.pregel.PageRankPregel'
 }
 
-tasks.named('test') {
+// tasks.named('test') {
+test {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+
+    // Since JDK 17 the default access to the following
+    // packages is "deny". We need to open them in order
+    // to gain access in GDS / Neo4j.
+    jvmArgs += '--add-opens=java.base/java.lang=ALL-UNNAMED'
+    jvmArgs += '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
+    jvmArgs += '--add-opens=java.base/java.nio=ALL-UNNAMED'
+    jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
+    jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
+    jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+
 }
 
 shadowJar {
